dez pokemons adicionados, tipo voador e tipo normal adicionados

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li class="cartao-pokemon">
                 <div class="informacoes">
                     <span>Bulbasaur</span>
-                    <span>#001</span>
+                    <span>#0001</span>
                 </div>
                 <img src="./src/imagens/bulbasaur.gif" alt="Bulbasaur" class="gif" />
                 <ul class="tipos">
@@ -48,7 +48,7 @@
             <li class="cartao-pokemon">
                 <div class="informacoes">
                     <span>Ivysaur</span>
-                    <span>#002</span>
+                    <span>#0002</span>
                 </div>
                 <img src="./src/imagens/ivysaur.gif" alt="Ivysaur" class="gif" />
                 <ul class="tipos">
@@ -62,7 +62,7 @@
             <li class="cartao-pokemon">
                 <div class="informacoes">
                     <span>Venusaur</span>
-                    <span>#003</span>
+                    <span>#0003</span>
                 </div>
                 <img src="./src/imagens/venusaur.gif" alt="Venusaur" class="gif" />
                 <ul class="tipos">
@@ -76,7 +76,7 @@
             <li class="cartao-pokemon">
                 <div class="informacoes">
                     <span>Charmander</span>
-                    <span>#004</span>
+                    <span>#0004</span>
                 </div>
                 <img src="./src/imagens/charmander.gif" alt="Charmander" class="gif" />
                 <ul class="tipos">
@@ -89,7 +89,7 @@
             <li class="cartao-pokemon">
                 <div class="informacoes">
                     <span>Charmeleon</span>
-                    <span>#005</span>
+                    <span>#0005</span>
                 </div>
                 <img src="./src/imagens/charmeleon.gif" alt="Charmeleon" class="gif" />
                 <ul class="tipos">
@@ -102,11 +102,12 @@
             <li class="cartao-pokemon">
                 <div class="informacoes">
                     <span>Charizard</span>
-                    <span>#006</span>
+                    <span>#0006</span>
                 </div>
                 <img src="./src/imagens/charizard.gif" alt="Charizard" class="gif" />
                 <ul class="tipos">
                     <li class="tipo fogo">Fogo</li>
+                    <li class="tipo voador">Voo</li>
                 </ul>
                 <p class="descricao">Ele cospe fogo que é quente o suficiente para derreter pedregulhos. Pode causar
                     incêndios florestais soprando chamas.</p>
@@ -115,7 +116,7 @@
             <li class="cartao-pokemon">
                 <div class="informacoes">
                     <span>Squirtle</span>
-                    <span>#007</span>
+                    <span>#0007</span>
                 </div>
                 <img src="./src/imagens/squirtle.gif" alt="Squirtle" class="gif" />
                 <ul class="tipos">
@@ -128,7 +129,7 @@
             <li class="cartao-pokemon">
                 <div class="informacoes">
                     <span>Wartortle</span>
-                    <span>#008</span>
+                    <span>#0008</span>
                 </div>
                 <img src="./src/imagens/wartortle.gif" alt="Wartortle" class="gif" />
                 <ul class="tipos">
@@ -141,7 +142,7 @@
             <li class="cartao-pokemon">
                 <div class="informacoes">
                     <span>Blastoise</span>
-                    <span>#009</span>
+                    <span>#0009</span>
                 </div>
                 <img src="./src/imagens/blastoise.gif" alt="Blastoise" class="gif" />
                 <ul class="tipos">
@@ -154,14 +155,141 @@
             <li class="cartao-pokemon">
                 <div class="informacoes">
                     <span>Caterpie</span>
-                    <span>#010</span>
+                    <span>#0010</span>
                 </div>
                 <img src="./src/imagens/caterpie.gif" alt="Caterpie" class="gif" />
                 <ul class="tipos">
                     <li class="tipo inseto">Inseto</li>
                 </ul>
                 <p class="descricao">Para proteção, ele libera um fedor horrível da antena em sua cabeça para afastar
-                    osinimigos.</p>
+                    os inimigos.</p>
+            </li>
+
+            <li class="cartao-pokemon">
+                <div class="informacoes">
+                    <span>Metapod</span>
+                    <span>#0011</span>
+                </div>
+                <img src="./src/imagens/metapod.gif" alt="Metapod" class="gif" />
+                <ul class="tipos">
+                    <li class="tipo inseto">Inseto</li>
+                </ul>
+                <p class="descricao">Está esperando o momento de evoluir. Nesta fase, só pode endurecer, por isso permanece imóvel para evitar o ataque.</p>
+            </li>
+
+            <li class="cartao-pokemon">
+                <div class="informacoes">
+                    <span>Butterfree</span>
+                    <span>#0012</span>
+                </div>
+                <img src="./src/imagens/butterfree.gif" alt="Butterfree" class="gif" />
+                <ul class="tipos">
+                    <li class="tipo inseto">Inseto</li>
+                    <li class="tipo voador">Voo</li>
+                </ul>
+                <p class="descricao">Em batalha, ele bate as asas em grande velocidade para liberar poeira altamente tóxica no ar.</p>
+            </li>
+
+            <li class="cartao-pokemon">
+                <div class="informacoes">
+                    <span>Weedle</span>
+                    <span>#0013</span>
+                </div>
+                <img src="./src/imagens/weedle.gif" alt="Weedle" class="gif" />
+                <ul class="tipos">
+                    <li class="tipo inseto">Inseto</li>
+                    <li class="tipo veneno">Veneno</li>
+                </ul>
+                <p class="descricao">Cuidado com o ferrão afiado em sua cabeça. Ele se esconde na grama e nos arbustos onde come folhas.</p>
+            </li>
+
+            <li class="cartao-pokemon">
+                <div class="informacoes">
+                    <span>Kakuna</span>
+                    <span>#0014</span>
+                </div>
+                <img src="./src/imagens/kakuna.gif" alt="Kakuna" class="gif" />
+                <ul class="tipos">
+                    <li class="tipo inseto">Inseto</li>
+                    <li class="tipo veneno">Veneno</li>
+                </ul>
+                <p class="descricao">Capaz de se mover apenas ligeiramente. Quando em perigo, pode mostrar seu ferrão e envenenar seu inimigo.</p>
+            </li>
+
+            <li class="cartao-pokemon">
+                <div class="informacoes">
+                    <span>Beedrill</span>
+                    <span>#0015</span>
+                </div>
+                <img src="./src/imagens/beedrill.gif" alt="Beedrill" class="gif" />
+                <ul class="tipos">
+                    <li class="tipo inseto">Inseto</li>
+                    <li class="tipo veneno">Veneno</li>
+                </ul>
+                <p class="descricao">Tem três ferrões venenosos nas patas dianteiras e na cauda. Eles são usados ​​para espetar seu inimigo repetidamente.</p>
+            </li>
+
+            <li class="cartao-pokemon">
+                <div class="informacoes">
+                    <span>Pidgey</span>
+                    <span>#0016</span>
+                </div>
+                <img src="./src/imagens/pidgey.gif" alt="Pidgey" class="gif" />
+                <ul class="tipos">
+                    <li class="tipo normal">Normal</li>
+                    <li class="tipo voador">Voo</li>
+                </ul>
+                <p class="descricao">Muito dócil. Se atacado, muitas vezes chuta areia para se proteger, em vez de revidar.</p>
+            </li>
+
+            <li class="cartao-pokemon">
+                <div class="informacoes">
+                    <span>Pidgeotto</span>
+                    <span>#0017</span>
+                </div>
+                <img src="./src/imagens/pidgeotto.gif" alt="Pidgeotto" class="gif" />
+                <ul class="tipos">
+                    <li class="tipo normal">Normal</li>
+                    <li class="tipo voador">Voo</li>
+                </ul>
+                <p class="descricao">Este Pokémon está cheio de vitalidade. Ele voa constantemente em torno de seu grande território em busca de presas.</p>
+            </li>
+
+            <li class="cartao-pokemon">
+                <div class="informacoes">
+                    <span>Pidgeot</span>
+                    <span>#0018</span>
+                </div>
+                <img src="./src/imagens/pidgeot.gif" alt="Pidgeot" class="gif" />
+                <ul class="tipos">
+                    <li class="tipo normal">Normal</li>
+                    <li class="tipo voador">Voo</li>
+                </ul>
+                <p class="descricao">Este Pokémon voa na velocidade de Mach 2, buscando presas. Suas grandes garras são temidas como armas perversas.</p>
+            </li>
+
+            <li class="cartao-pokemon">
+                <div class="informacoes">
+                    <span>Rattata</span>
+                    <span>#0019</span>
+                </div>
+                <img src="./src/imagens/rattata.gif" alt="Rattata" class="gif" />
+                <ul class="tipos">
+                    <li class="tipo normal">Normal</li>
+                </ul>
+                <p class="descricao">Mastigará qualquer coisa com suas presas. Se você vir um, pode ter certeza de que mais 40 vivem na área.</p>
+            </li>
+
+            <li class="cartao-pokemon">
+                <div class="informacoes">
+                    <span>Raticate</span>
+                    <span>#0020</span>
+                </div>
+                <img src="./src/imagens/raticate.gif" alt="Raticate" class="gif" />
+                <ul class="tipos">
+                    <li class="tipo normal">Normal</li>
+                </ul>
+                <p class="descricao">Suas patas traseiras são palmadas. Eles agem como nadadeiras, então podem nadar em rios e caçar presas.</p>
             </li>
         </ul>
     </main>
