spearow adicionado, tamanho max da main modificado

--- a/index.html
+++ b/index.html
@@ -291,6 +291,19 @@
                 </ul>
                 <p class="descricao">Suas patas traseiras são palmadas. Eles agem como nadadeiras, então podem nadar em rios e caçar presas.</p>
             </li>
+
+            <li class="cartao-pokemon">
+                <div class="informacoes">
+                    <span>Spearow</span>
+                    <span>#0021</span>
+                </div>
+                <img src="./src/imagens/spearow.gif" alt="Spearow" class="gif" />
+                <ul class="tipos">
+                    <li class="tipo normal">Normal</li>
+                    <li class="tipo voador">Voo</li>
+                </ul>
+                <p class="descricao">Inepto em voar alto. No entanto, ele pode voar muito rápido para proteger seu território.</p>
+            </li>
         </ul>
     </main>
 
